Added model mapper to dto for produkt and categories